--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#services">services</a>
       <a href="#gallery">gallery</a>
       <a href="#review">review</a>
-      <a href="#contact">contact</a>
+      <a href="#contact">contacts</a>
     </nav>
 
     <div class="icons">
