--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
     <form action="">
       <h3>login</h3>
-      <input type="email" name="" id="" class="box" placeholder="enter your email">
-      <input type="password" name="" id="" class="box" placeholder="enter your password">
+      <input type="email" name="" id="" class="box" placeholder="enter your email" required>
+      <input type="password" name="" id="" class="box" placeholder="enter your password" required>
       <input type="submit" value="login now" class="btn">
       <input type="checkbox" name="" id="remember">
       <label for="remember">remember me</label>
       <p>forget password? <a href="#">click here</a></p>
-      <p>don't have and account? <a href="#">register now</a></p>
+      <p>don't have and account? <a href="register.html">register now</a></p>
     </form>
   </div>
 
